# thesis

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml  settings.json  setup.sh
infra/: .gitignore  .terraform.lock.hcl  nebius.tf
notebooks/dataset-generation/: build.ipynb  generate_pairs.ipynb  upload.ipynb
notebooks/evaluation/: evaluation.ipynb  upload.ipynb
notebooks/fine-tuning/: train.ipynb  train_smoke.ipynb  upload.ipynb
notebooks/qwen/: sample.ipynb
notebooks/sample/: llm_compiler.ipynb  qwen.ipynb
notebooks/samples/: qwen.ipynb
scripts/: download_dataset.py  nb_params.py
