[project]
name = "thesis"
version = "0.1.0"
description = "Scaling study: fine-tuning Qwen2.5-Coder to compile C → LLVM IR at -O3"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.8",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "torch>=2.12.0",
    "transformers>=5.12.0",
    "zstandard>=0.25.0",
]
